# stock-market-simulation-system-in-FAST-API

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  constants.py  docker-compose.yml  main.py  pyproject.toml  sample_env
alembic/: env.py
alembic/versions/: 92a8a3a30794_.py
celery_service/: celery.py
celery_service/tasks/: saving_transactions.py
common/: jwt_token.py  methods.py
config/: config.py
db/: __init__.py  database.py
models/: __init__.py  baseclass.py  stockdata.py  transactions.py  user.py
routes/: stockdata_routes.py  transactions_routes.py  user_routes.py
schemas/: baseclass_schema.py  stockdata_schema.py  transactions_schemas.py  user_schema.py
tests/: conftest.py  database.py  test_stock.py  test_transactions.py  test_user.py
